bnxt_en: add support for fwctl infrastructure
This patch adds basic support for the fwctl infrastructure.  With the
approriate tool, the most basic RPC to the bnxt_en firmware can be
called.

Signed-off-by: Andy Gospodarek <gospo@broadcom.com>

--- a/drivers/fwctl/Kconfig
+++ b/drivers/fwctl/Kconfig
@@ -29,4 +29,13 @@ config FWCTL_CXL
 	  mailbox commands for CXL device.
 
 	  If you don't know what to do here, say N.
+
+config FWCTL_BNXT
+	tristate "bnxt control fwctl driver"
+	depends on BNXT
+	help
+	  BNXTCTL provides interface for the user process to access the debug and
+	  configuration registers of the Broadcom NIC hardware family
+
+	  If you don't know what to do here, say N.
 endif
